unpackaged/main/default/objects/legaldeskapp__LegalDesk_Field_Option__mdt/legaldeskapp__LegalDesk_Field_Option__mdt.object-meta.xml
<CustomObject>
    <description>This Custom Metadata Type will store the option values for Streamline AI input fields of type Select, Radio, and Checkbox.</description>
    <label>Streamline AI Field Option</label>
    <pluralLabel>Streamline AI Field Options</pluralLabel>
</CustomObject>