unpackaged/main/default/objects/legaldeskapp__LegalDesk_Field_Option__mdt/fields/legaldeskapp__Active__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>