unpackaged/main/default/objects/legaldeskapp__LegalDesk_Field_Option__mdt/fields/legaldeskapp__Option_Order__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Option_Order__c</fullName>
    <label>Option Order</label>
    <length>10</length>
    <type>Text</type>
</CustomField>