unpackaged/main/default/objects/legaldeskapp__LegalDesk_Field_Option__mdt/fields/legaldeskapp__Value__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Value__c</fullName>
    <description>This field tracks the value of an option for LegalDesk_Mapping fields with a DataType of Select, Radio or Checkbox.</description>
    <inlineHelpText>Enter an option value.</inlineHelpText>
    <label>Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>